# capnproto-swift

./: .gitignore  CMakeLists.txt  Package.swift  README.md
.swiftpm/xcode/xcuserdata/arsen.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: build-capnp.sh  build-xcframework.sh
src/Capnp/: Capnp.swift
src/CapnpCLib/: capnp_c.cpp  module.modulemap
src/CapnpCLib/include/: capnp_c.h
tests/CapnpTests/: CapnpTests.swift
